--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+body{
+    margin: 0;
+    padding: 0;
+    background: aquamarine;
+}
+
 .container{
     position: absolute;
     font-family: sans-serif;
